--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "dependencies": {
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.8.1",
+    "@pinia/nuxt": "^0.9.0",
     "lucide-vue-next": "^0.469.0",
     "nuxt": "^3.15.0",
     "nuxt-lucide-icons": "^1.0.5",
+    "pinia": "^2.3.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "jsbarcode": "^3.11.5"
+
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "autoprefixer": "^10.4.20",
+    "nuxt-headlessui": "^1.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   }
